se agrego portafolio tarea 2

--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="x-UA-compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, inicial-scale=1.0" />
-    <title>la tarea de casa #2</title>
+    <title>la tarea de casa #1</title>
   </head>
   <body>
     <header>
-      Webstudio
+      <a href="#"> Webstudio </a>
       <nav>
         <ul>
-          <li>Estudio</li>
-          <li>Portafolio</li>
-          <li>Contactos</li>
+          <li>
+            <a href="#"> Estudio </a>
+          </li>
+          <li>
+            <a href="#"> Portafolio </a>
+          </li>
+          <li>
+            <a href="#"> Contactos </a>
+          </li>
         </ul>
         <ul class="nav_contacs">
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -22,11 +28,11 @@
       </nav>
     </header>
     <main>
-      <selection>
+      <section>
         <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-        <button>Solicite nuestro servicio</button>
-      </selection>
-      <selection>
+        <button type="button">Solicite nuestro servicio</button>
+      </section>
+      <section>
         <ul>
           <li>
             <h3>ATENCIÓN A LOS DETALLES</h3>
@@ -50,8 +56,15 @@
               aplicación de soluciones.
             </p>
           </li>
+          <li>
+            <h3>TECNOLIGIA MODERNA</h3>
+            <p>
+              Usamos herramientas innovadoras para resolver las tareas
+              asignadas. Es hora de simplificar los procesos laborales.
+            </p>
+          </li>
         </ul>
-      </selection>
+      </section>
       <section>
         <h2>A qué nos dedicamos</h2>
         <ul>
@@ -87,9 +100,9 @@
       </section>
     </main>
     <footer>
-      <h3>WebStudio</h3>
+      <a>WebStudio</a>
       <address>
-        Calz. Ticomán 500, Ciudad de México, CDMX, México
+        <a href="#"> Calz. Ticomán 500, Ciudad de México, CDMX, México </a>
         <ul>
           <li><a href="mailto:info@example.com">info@example.com</a></li>
           <li><a href="tel:+52 55 5529 6000">+52 55 5529 6000</a></li>
