--- a/index.html
+++ b/index.html
@@ -1,113 +1,129 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="x-UA-compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, inicial-scale=1.0" />
-    <title>la tarea de casa #2</title>
-  </head>
-  <body>
-    <header>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="x-UA-compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, inicial-scale=1.0">
+  <link rel="stylesheet" href="./css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+  rel="stylesheet">
+  <title>la tarea de casa #2</title>
+</head>
+
+<body>
+  <!--header-->
+  <header>
+    <!--navigation-->
+    <nav>
       <a href="#"> Webstudio </a>
-      <nav>
-        <ul>
-          <li>
-            <a href="#"> Estudio </a>
-          </li>
-          <li>
-            <a href="#"> Portafolio </a>
-          </li>
-          <li>
-            <a href="#"> Contactos </a>
-          </li>
-        </ul>
-        <ul class="nav_contacs">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+52 55 5529 6000">+52 55 5529 6000</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section>
-        <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-        <button type="button">Solicite nuestro servicio</button>
-      </section>
-      <section>
-        <ul>
-          <li>
-            <h3>ATENCIÓN A LOS DETALLES</h3>
-            <p>
-              Nos adentramos en todos los detalles y procesos de su negocio,
-              para así desarrollar una solución a su medida.
-            </p>
-          </li>
-          <li>
-            <h3>PUNTUALIDAD</h3>
-            <p>
-              Con nosotros, usted puede sentirse seguro y protegido. Un
-              principio importante de la empresa: respetar su tiempo y respetar
-              los plazos acordados.
-            </p>
-          </li>
-          <li>
-            <h3>PLANIFICACIÓN</h3>
-            <p>
-              Usted podrá observar y participar en cada fase del desarrollo y
-              aplicación de soluciones.
-            </p>
-          </li>
-          <li>
-            <h3>TECNOLIGIA MODERNA</h3>
-            <p>
-              Usamos herramientas innovadoras para resolver las tareas
-              asignadas. Es hora de simplificar los procesos laborales.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>A qué nos dedicamos</h2>
-        <ul>
-          <li><img src="./IMG/Imagen 1.jpg" alt="imagen 1" /></li>
-          <li><img src="./IMG/imagen 2.jpg" alt="imagen 2" /></li>
-          <li><img src="./IMG/imagen 3.jpg" alt="imagen 3" /></li>
-        </ul>
-      </section>
-      <section>
-        <h2>Nuestro Equipo</h2>
-        <ul>
-          <li>
-            <img src="./IMG/persona 1.jpg" alt="Andrés Cubo" width="300px" />
-            <h3>Andrés Cubo</h3>
-            <p>Diseñador de Productos</p>
-          </li>
-          <li>
-            <img src="./IMG/persona 2.jpg" alt="Carla Palacios" width="300px" />
-            <h3>Carla Palacios</h3>
-            <p>Desarrolladora Frontend</p>
-          </li>
-          <li>
-            <img src="./IMG/persona 3.jpg" alt="Mario Dorado" width="300px" />
-            <h3>Mario Dorado</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./IMG/persona 4.jpg" alt="Pablo Mijangos" width="300px" />
-            <h3>Pablo Mijangos</h3>
-            <p>Diseñador IU</p>
-          </li>
-        </ul>
-      </section>
+      <ul class="navigation">
+        <li>
+          <a href="./index.html" class="link current"> Estudio </a>
+        </li>
+        <li>
+          <a href="./portafolio.html" class="link"> Portafolio </a>
+        </li>
+        <li>
+          <a href="#" class="link"> Contactos </a>
+        </li>
+      </ul>
+      <!--header contacts-->
+      <ul class="contacts-header">
+        <li>
+          <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a class="contact" href="tel:+525555296000">+52 55 5529 6000</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <!--hero-->
+    <section class="hero">
+      <h1 class="hero-title">SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
+      <button class="button-order" type="button">Solicite nuestro servicio</button>
+    </section>
+    <!--information-->
+    <section class="information">
+      <ul>
+        <li>
+          <h3 class="information-title">ATENCIÓN A LOS DETALLES</h3>
+          <p class="information-text">
+            Nos adentramos en todos los detalles y procesos de su negocio,
+            para así desarrollar una solución a su medida.
+          </p>
+        </li>
+        <li>
+          <h3 class="information-title">PUNTUALIDAD</h3>
+          <p class="information-text">
+            Con nosotros, usted puede sentirse seguro y protegido. Un
+            principio importante de la empresa: respetar su tiempo y respetar
+            los plazos acordados.
+          </p>
+        </li>
+        <li>
+          <h3 class="information-title">PLANIFICACIÓN</h3>
+          <p class="information-text">
+            Usted podrá observar y participar en cada fase del desarrollo y
+            aplicación de soluciones.
+          </p>
+        </li>
+        <li>
+          <h3 class="information-title">TECNOLIGIA MODERNA</h3>
+          <p class="information-text">
+            Usamos herramientas innovadoras para resolver las tareas
+            asignadas. Es hora de simplificar los procesos laborales.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="target">
+      <h2 class="title">A qué nos dedicamos</h2>
+      <ul class="target-list">
+        <li><img src="./IMG/imagen_1.jpg" alt="imagen 1"></li>
+        <li><img src="./IMG/imagen_2.jpg" alt="imagen 2"></li>
+        <li><img src="./IMG/imagen_3.jpg" alt="imagen 3"></li>
+      </ul>
+    </section>
+    <!--team-->
+    <section class="team">
+      <h2 class="title">Nuestro Equipo</h2>
+      <ul>
+        <li>
+          <img src="./IMG/persona_1.jpg" alt="Andrés Cubo" width="300">
+          <h3 class="team-title">Andrés Cubo</h3>
+          <p class="team-text">Diseñador de Productos</p>
+        </li>
+        <li>
+          <img src="./IMG/persona_2.jpg" alt="Carla Palacios" width="300">
+          <h3 class="team-title">Carla Palacios</h3>
+          <p class="team-text">Desarrolladora Frontend</p>
+        </li>
+        <li>
+          <img src="./IMG/persona_3.jpg" alt="Mario Dorado" width="300">
+          <h3 class="team-title">Mario Dorado</h3>
+          <p class="team-text">Marketing</p>
+        </li>
+        <li>
+          <img src="./IMG/persona_4.jpg" alt="Pablo Mijangos" width="300">
+          <h3 class="team-title">Pablo Mijangos</h3>
+          <p class="team-text">Diseñador IU</p>
+        </li>
+      </ul>
+    </section>
     </main>
-    <footer>
+    <!--footer-->
+    <footer class="contacts" id="contacts">
       <a>WebStudio</a>
-      <address>
-        <a href="#"> Calz. Ticomán 500, Ciudad de México, CDMX, México </a>
-        <ul>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+52 55 5529 6000">+52 55 5529 6000</a></li>
-        </ul>
-      </address>
+      <ul class="contacts-footer">
+        <li>
+          <address> Calz. Ticomán 500, Ciudad de México, CDMX, México</address>
+        </li>
+        <li><a class="contact" href="mailto:info@example.com">info@example.com</a></li>
+        <li><a class="contact" href="tel:+525555296000">+52 55 5529 6000</a></li>
+      </ul>
     </footer>
-  </body>
+</body>
 </html>
