--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="./index.html" class="link current"> Estudio </a>
           </li>
           <li>
-            <a href="./portafolio.html" class="link"> Portafolio </a>
+            <a href="./portfolio.html" class="link"> portfolio </a>
           </li>
           <li>
             <a href="#" class="link"> Contactos </a>
