--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>portafolio</title>
+    <title>portfolio</title>
   </head>
 
   <body>
@@ -23,7 +23,7 @@
             <a href="./index.html" class="link"> Estudio </a>
           </li>
           <li>
-            <a href="./portafolio.html" class="link current"> Portafolio </a>
+            <a href="./portfolio.html" class="link current"> portfolio </a>
           </li>
           <li>
             <a href="#" class="link"> Contactos </a>
@@ -56,7 +56,7 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portafolio/tecnoduck.jpg"
+                src="./IMG/portfolio/tecnoduck.jpg"
                 width="370"
                 height="294"
                 alt="Tecnoduck"
@@ -68,7 +68,7 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portafolio/orleans.jpg"
+                src="./IMG/portfolio/orleans.jpg"
                 width="370"
                 height="294"
                 alt="orleans"
@@ -83,7 +83,7 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portafolio/restaurante.jpg"
+                src="./IMG/portfolio/restaurante.jpg"
                 width="370"
                 height="294"
                 alt="aplicaciones"
@@ -95,7 +95,7 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portafolio/audifonos.jpg"
+                src="./IMG/portfolio/audifonos.jpg"
                 width="370"
                 height="294"
                 alt="Proyecto Prime"
@@ -107,7 +107,7 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portafolio/proyecto_cajas.jpg"
+                src="./IMG/portfolio/proyecto_cajas.jpg"
                 width="370"
                 height="294"
                 alt="Proyecto cajas"
@@ -119,7 +119,7 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portafolio/inspiracion.jpg"
+                src="./IMG/portfolio/inspiracion.jpg"
                 width="370"
                 height="294"
                 alt="Inspiration no tiene limites"
@@ -131,7 +131,7 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portafolio/edicion.jpg"
+                src="./IMG/portfolio/edicion.jpg"
                 width="370"
                 height="294"
                 alt="Edicion"
@@ -143,7 +143,7 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portafolio/lab.jpg"
+                src="./IMG/portfolio/lab.jpg"
                 width="370"
                 height="294"
                 alt="LAB"
@@ -155,7 +155,7 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portafolio/negocio.jpg"
+                src="./IMG/portfolio/negocio.jpg"
                 width="370"
                 height="294"
                 alt="Negocio en crecimiento"
