change names folders

--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,7 @@
                 height="294"
                 alt="Inspiration no tiene limites"
               />
-              <h3><span lang="es">Inspiracion no tiene l{imites</span></h3>
+              <h3><span lang="es">Inspiracion no tiene limites</span></h3>
               <p class="gallery-text">Stio-web</p>
             </a>
           </li>
