chenge names foders

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portfolio/restaurante.jpg"
+                src="./IMG/portfolio/restaurant.jpg"
                 width="370"
                 height="294"
                 alt="aplicaciones"
@@ -95,7 +95,7 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portfolio/audifonos.jpg"
+                src="./IMG/portfolio/air_phone.jpg"
                 width="370"
                 height="294"
                 alt="Proyecto Prime"
@@ -107,22 +107,22 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portfolio/proyecto_cajas.jpg"
+                src="./IMG/portfolio/project_box.jpg"
                 width="370"
                 height="294"
-                alt="Proyecto cajas"
+                alt="project_box"
               />
-              <h3>Proyecto <span lang="es">Cajas</span></h3>
+              <h3>Proyecto <span lang="es">cajas</span></h3>
               <p class="gallery-text">Aplicaciones</p>
             </a>
           </li>
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portfolio/inspiracion.jpg"
+                src="./IMG/portfolio/inspiration.jpg"
                 width="370"
                 height="294"
-                alt="Inspiration no tiene limites"
+                alt="Inspiracion no tiene limites"
               />
               <h3><span lang="es">Inspiracion no tiene limites</span></h3>
               <p class="gallery-text">Stio-web</p>
@@ -155,7 +155,7 @@
           <li>
             <a class="link" href="#">
               <img
-                src="./IMG/portfolio/negocio.jpg"
+                src="./IMG/portfolio/business.jpg"
                 width="370"
                 height="294"
                 alt="Negocio en crecimiento"
