change name portafolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>portfolio</title>
+    <title>Portafolio</title>
   </head>
 
   <body>
@@ -23,7 +23,7 @@
             <a href="./index.html" class="link"> Estudio </a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link current"> portfolio </a>
+            <a href="./portfolio.html" class="link current"> Portafolio </a>
           </li>
           <li>
             <a href="#" class="link"> Contactos </a>
